Create lookup table to reduce time complexity with reduce array method

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    js
+    <h2 id="hello">Hello</h2>
 
-    <script src="DSA-Js.js"></script>
+    <script src="critical-thinking/m-1.js"></script>
 </body>
 </html>
